[package]
name = "dns_resolver"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.4", features = ["derive"] }
futures = "0.3"
rand = "0.8"
reqwest = { version = "0.11", features = ["json", "stream"] }
rusqlite = { version = "0.29", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
trust-dns-resolver = { version = "0.23", features = ["tokio-runtime"] }
